fix: adds contrasting color for submit button

--- a/source/scss/modules/_button.scss
+++ b/source/scss/modules/_button.scss
@@ -71,7 +71,11 @@
 }
 .form__button {
   width: 100%;
-  background-color: transparent;
+  background-color: rgba($c--deep-sea-green, .9);
   @include rem( margin-top, 3 );
   cursor: pointer;
+  color: $c--ice-cold;
+  -webkit-font-smoothing: antialiased;
+  font-weight: bold;
+  border-color: $c--ice-cold;
 }
